droppy/Deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: droppy-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: droppy
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: droppy
    spec:
      containers:
      - name: droppy-container
        image: silverwind/droppy
        ports:
        - containerPort: 8989
        volumeMounts:
        - mountPath: /config
          name: droppy-config
        - mountPath: /files
          name: droppy-files
      restartPolicy: Always
      volumes:
      - name: droppy-config
        persistentVolumeClaim:
          claimName: droppy-pvc-config
      - name: droppy-files
        persistentVolumeClaim:
          claimName: droppy-pvc-files
