droppy/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: droppy-service
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8989
  selector:
    app: droppy
