droppy/Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: droppy-ingress
  annotations:
   kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: droppy.detainedu.lan
    http:
      paths:
      - path: /
        backend:
          serviceName: droppy-service
          servicePort: 80
